Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87313

compositor_api/qwaylandquickitem.cpp:1397:49: error: ‘QPlatformInterface’ has not been declared

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.1.0 RC
    • 6.0.0 Beta1
    • Wayland Compositor
    • None
    • 8890e05c45575f43e2fef5ac09efee3d05a34a60 (qt/qtwayland/dev)

    Description

      compositor_api/qwaylandquickitem.cpp:315:27: error: ‘QPlatformInterface’ has not been declared
       
       606:          const QList<QTouchEvent::TouchPoint> &points = event->touchPoints();
                                                                                  ^
       In file included from /home/qt/work/install/include/QtQuick/qquickitem.h:49,
                        from /home/qt/work/install/include/QtQuick/QQuickItem:1,
                        from compositor_api/qwaylandquickitem.h:35,
                        from compositor_api/qwaylandquickitem.cpp:30:
       /home/qt/work/install/include/QtGui/qevent.h:1000:31: note: declared here
            const QList<QEventPoint> &touchPoints() const { return points(); }
                                      ^~~~~~~~~~~
       compositor_api/qwaylandquickitem.cpp: In member function ‘virtual QSGNode* QWaylandQuickItem::updatePaintNode(QSGNode*, QQuickItem::UpdatePaintNodeData*)’:
       compositor_api/qwaylandquickitem.cpp:1397:49: error: ‘QPlatformInterface’ has not been declared
       
       613:      const QList<QEventPoint> &touchPoints() const { return points(); }
                                      ^~~~~~~~~~~
       compositor_api/qwaylandquickitem.cpp: In member function ‘virtual QSGNode* QWaylandQuickItem::updatePaintNode(QSGNode*, QQuickItem::UpdatePaintNodeData*)’:
       compositor_api/qwaylandquickitem.cpp:1397:49: error: ‘QPlatformInterface’ has not been declared
                        QSGTexture *scenegraphTexture = QPlatformInterface::QSGOpenGLTexture::fromNative(texture->textureId(),
      

      Build log: https://testresults.qt.io/logs/qt/qtwayland/ba5c8dc8da48d3c1205994656585250b837a32b9/LinuxUbuntu_20_04x86_64LinuxQEMUmips64GCCqtci-linux-Ubuntu-20.04-x86_64-50-bcf343DisableTests_UseLegacyInstructions/b721c6194f735263775d8da0f6935c44cfeebc0e/build_1602236423/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1602236164

      Tested changes (refs/builds/qtci/dev/1602236162):
      https://codereview.qt-project.org/c/qt/qtwayland/+/316853/1 Update dependencies on 'dev' in qt/qtwayland

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.graphics.and.multimedia Qt Graphics Team
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes