Adapt to platform API rename

Fixes: QTBUG-87313
Change-Id: I99c0b08d908cffe271b555e0696af5fba3fb8780
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>